--- a/reactjs_erd/package.json
+++ b/reactjs_erd/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.2",
     "firebase": "^7.20.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
