--- a/ts_cv/package.json
+++ b/ts_cv/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-bootstrap": "^0.32.24",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "react": "^16.13.1",
@@ -16,7 +17,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "typescript": "~4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
